components/map-service/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: nyc-transit
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: map-service
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elmap-service
  namespace: nyc-transit
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-map-service
    weight: null
status: {}
